# shudian.xyz

./: LICENSE  README.md  edgedb.toml  prod.sh
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/assets/scss/: _base.scss  _shop_card.scss  _shop_detail.scss  _shop_list.scss  app.scss
frontend/src/: api.rs  app.rs  main.rs  route.rs  types.rs
frontend/src/components/: mod.rs  navbar.rs  shop_item.rs  shop_list.rs
frontend/src/pages/: home.rs  mod.rs  shop.rs  shop_detail.rs
server/: Cargo.toml
server/src/: main.rs  query.rs
