[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.0"
log = "0.4.17"
serde = { version= "1.0.137", features= ["derive"] }
serde_json = "1.0.81"
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
yew = "0.19.3"
yew-interop = "0.3.0"
yew-router = "0.16.0"
